# data-engineering-zoomcamp

./: Module03_BigQuery_DataWarehouse.html  Module06_Batch_Spark.html  Module07_Streaming.html  Module08_Cohorts_Projects_Assets.html  master_de_roadmap.md  module_template.html  repo_notes_M01.md  repo_notes_M03.md  repo_notes_M04.md  repo_notes_M06.md  repo_notes_M07.md  repo_notes_M08.md
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/broken/: 01_pagination_bug.py  02_retry_duplicate_load.py  03_partial_file_write.py  04_missing_env_var.md  05_invalid_required_columns.md
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/exercises/: level_01_csv.md  level_02_json_jsonl.md  level_03_simulated_api.md  level_04_postgres_load.md  level_05_tests.md  level_06_debug_broken.md
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/runbook/: python_ingestion_runbook.md
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/solutions/: 01_pagination_solution.md  02_retry_duplicate_solution.md  03_partial_file_write_solution.md  04_validation_solution.md
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/sql/: 00_schema.sql
codex/https-github-com-datatalksclub-data-engineering/02-python-practice/src/: __init__.py  config.py  extract.py  load.py  logging_config.py  main.py  transform.py  validate.py
(+783 files in other folders)
