[project]
name = "python-practice"
version = "0.1.0"
description = "Production-style Python ingestion lab for Data Engineering learning"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

